--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,16 @@
             <artifactId>spring-context</artifactId>
             <version>5.3.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.29</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>4.3.9.RELEASE</version>
+        </dependency>
     </dependencies>
     <packaging>war</packaging>
 
