--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,12 @@
             <artifactId>spring-web</artifactId>
             <version>5.2.17.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
     <packaging>war</packaging>
